<resources>
    <string name="app_name">Hand Works</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="handworks_logo">Handworks Logo</string>
    <string name="get_started">Get Started</string>
    <string name="handworks_cleaning_services_2025">© Handworks Cleaning Services 2026</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="error">Error</string>
    <string name="vertical_line"> | </string>
    <string name="dash">-</string>
    <string name="service_general_cleaning">General Cleaning</string>
    <string name="service_couch">Couch Cleaning</string>
    <string name="service_mattress">Mattress Cleaning</string>
    <string name="service_car">Car Interior Cleaning</string>
    <string name="service_post">Post-Construction Cleaning</string>
    <string name="service_unknown">Unknown Service</string>
    <string name="none">None</string>
    <string name="image">Image</string>
    <string name="loading">Loading…</string>
    <string name="na">N/A</string>
    <string name="price_format">₱%1$.2f</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="booking_details">Booking Details</string>
    <string name="no_cleaning_site_provided">No cleaning site provided</string>
    <string name="dirty_scale">Dirty Scale: %1$d/5</string>
    <string name="payment_method">Method: %s</string>
    <string name="order_number">Order #: %s</string>
    <string name="scheduled_at">Scheduled at: %1$s</string>
    <string name="time_range">%1$s - %2$s%3$s</string>
    <string name="cleaning_site">Cleaning Site: %1$s</string>
    <string name="customer_number">Phone Number: %1$s</string>
    <string name="total_price_label">Total Price:</string>
    <string name="extra_hours_cost_label">Extra Hours Cost:</string>
    <string name="allocated_resource">Allocated Resource:</string>
    <string name="allocated_equipments">Allocated Equipments:</string>
    <string name="assigned_cleaners">Assigned Cleaners:</string>
    <string name="addons">Addons:</string>
    <string name="main_service">Main Service:</string>
    <string name="add_ons">Add-ons</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="downpayment">Downpayment</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="start_session">Start Session</string>
    <string name="end_session">End Session</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="hide_details">Hide Details ▼</string>
    <string name="view_details">View Details ▲</string>
    <string name="profile">Profile</string>
    <string name="your_firstname">Your FirstName</string>
    <string name="your_lastname">Your LastName</string>
    <string name="_1_year_ago">1 year ago</string>
    <string name="joined">Joined</string>
    <string name="continue_this">Continue</string>
    <string name="sign_out">Sign Out</string>
    <string name="header">header</string>
    <string name="resend_in_s">Resend in %1$ds</string>
    <string name="profile_info">Profile Info</string>
    <plurals name="reviews_count">
        <item quantity="one">Based on %d review</item>
        <item quantity="other">Based on %d reviews</item>
    </plurals>
    <string name="email_colon">Email: </string>
    <string name="hired_date_colon">Hired Date: </string>
    <string name="position_colon">Position: </string>
    <string name="status_colon">%s</string>
    <string name="_0_months_ago">0 months ago</string>
    <string name="please_contact_admin_for_registration">Please contact admin for registration</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="info_icon">Info icon</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email">Email</string>
    <string name="sign_in_to_continue_keeping_spaces_clean">Sign in to continue keeping spaces clean</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="about_handworks">About Handworks</string>
    <string name="professional_cleaning_built_on_trust_quality_and_care">Professional cleaning built on trust, quality, and care.</string>
    <string name="our_office">Our Office</string>
    <string name="handworks_cleaning_service_map_location">Handworks Cleaning Service Map Location</string>
    <string name="our_services">Our Services</string>
    <string name="residential_cleaning_n_office_and_commercial_cleaning_n_deep_cleaning_and_sanitization_n_eco_friendly_cleaning_options">• Residential Cleaning\n• Office and Commercial Cleaning\n• Deep Cleaning and Sanitization\n• Eco-friendly Cleaning Options</string>
    <string name="our_values">Our Values</string>
    <string name="we_believe_in_reliability_attention_to_detail_and_treating_every_space_as_if_it_were_our_own">We believe in reliability, attention to detail, and treating every space as if it were our own.</string>
    <string name="service_areas">Service Areas</string>
    <string name="cebu_city">• Cebu City</string>
    <string name="talisay">• Talisay</string>
    <string name="carcar">• Carcar</string>
    <string name="minglanilla">• Minglanilla</string>
    <string name="mandaue_city">• Mandaue City</string>
    <string name="back">Back</string>
    <string name="don_t_worry_we_ll_reset_your_password_and_send_you_a_n_link_to_create_a_new_one">Don’t worry, We’ll reset your password and send you a\n link to create a new one : )</string>
    <string name="send_reset_link">Send Email</string>
    <string name="resend_email">Resend email</string>
    <string name="didn_t_receive_the_email">Didn\'t receive the email?</string>
    <string name="enter_reset_code">Enter reset code</string>
    <string name="reset_password_code">Reset Password Code</string>
    <string name="validate_code">Validate Code</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="welcome_n_thanks_for_keeping_spaces_clean_n_glad_to_have_you_on_the_team">Welcome!\nThanks for keeping spaces clean.\nGlad to have you on the team.</string>
    <string name="our_team_of_experienced_and_certified_cleaners_takes_great_pride_in_providing_quality_service_with_a_smile">Our team of experienced and certified cleaners takes great pride in providing quality service with a smile.</string>
    <string name="learn_more">Learn More</string>
    <string name="cleaner_image">Cleaner Image</string>
    <string name="cleaner_name_display">Cleaner %1$s</string>
    <string name="as_of_display">As of %1$s</string>
    <string name="no_work_for_now">No work for now</string>
    <string name="set_down_and_relax_enjoy_a_drink_or_two">Set down and relax, enjoy a drink or two!</string>
    <string name="total_ongoing_work">Total ongoing work:</string>
    <string name="as_of_march_8_2026">As of March 8, 2026</string>
    <string name="_4">4,</string>
    <string name="cleaner_name">Cleaner Name</string>
    <string name="welcome">Welcome</string>
    <string name="today">Today</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="clocked_in_at">In:</string>
    <string name="clocked_out_at">Out:</string>
    <string name="_1">1</string>
    <string name="task">Task</string>
    <string name="next">Next</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="weekly">Weekly</string>
    <string name="temp_btn">Temp BTN</string>
    <string name="show_whole_calendar">Show Whole Calendar</string>
    <string name="_08_00_10_00">08:00\n10:00</string>
    <string name="cleaning_service">Cleaning Service</string>
    <string name="task_with_duration">%1$s (%2$d:%3$02d)</string>
    <string name="no_work_history_yet">No work history yet</string>
    <string name="your_previous_work_will_be_added_and_kept_here">Your previous work will be added and kept here</string>
    <string name="past_bookings">Past Bookings</string>
    <string name="check_out_your_history">Check out your history</string>
    <string name="start_sending_messages_or_receive_one_sooner">Start sending messages or receive one sooner</string>
    <string name="no_conversations_yet">No conversations yet</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="your_notifications_will_appear_here_once_you_ve_received_them">Your notifications will appear here once you\'ve received them.</string>
    <string name="get_notified">Get notified</string>
    <string name="later">Later</string>
    <string name="you_can_adjust_these_settings_later">You can adjust these settings later</string>
    <string name="your_tasks">Your tasks</string>
    <string name="get_notified_about_important_stuff">Get notified about important stuff</string>
    <string name="we_ll_notify_you_when">We\'ll notify you when</string>
    <string name="earnings">Earnings</string>
    <string name="updates">Updates</string>
    <string name="user_pfp">User PFP</string>
    <string name="handworks_cleaning">Handworks Cleaning</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="fullscreenimage">fullscreenImage</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="calendar">Calendar</string>
    <string name="retry">Retry</string>
    <string name="still_checking_your_session_nplease_check_your_internet_connection">Still checking your session.\nPlease check your internet connection.</string>
    <string name="there_seems_to_be_an_error_please_check_your_internet_connection_and_try_again">There seems to be an error. Please check your internet connection and try again.</string>
    <string name="oops">Oops!</string>
    <string name="error_illustration">Error Illustration</string>
    <string name="placeholder">Placeholder</string>
    <string name="session_started">Session Started</string>
    <string name="you_are_now_in_an_active_cleaning_session">You are now in an active cleaning session</string>
</resources>