<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeIcon"
        android:title="@string/home"
        android:icon="@drawable/home_icon"/>

    <item
        android:id="@+id/calendarIcon"
        android:title="@string/calendar"
        android:icon="@drawable/calendar_icon"/>

    <item
        android:id="@+id/historyIcon"
        android:title="@string/history"
        android:icon="@drawable/history_alt_svgrepo_com"/>

    <item
        android:id="@+id/chatIcon"
        android:title="@string/chat"
        android:icon="@drawable/chat_icon"/>

    <item
        android:id="@+id/notificationIcon"
        android:title="@string/notification"
        android:icon="@drawable/notification_icon"/>
</menu>