<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CalendarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <Button
            android:id="@+id/weeklyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/weekly"
            android:textColor="@color/textPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/weeklyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/weeklyBtn">

            <ImageView
                android:id="@+id/previousMonthBtn"
                android:layout_width="0dp"
                android:layout_weight="0.22"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/colorTertiary"
                android:contentDescription="@string/back"
                android:clickable="true"
                android:drawableTint="@color/background"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/outline_chevron_left"
                app:layout_constraintVertical_bias="0.5"
                app:tint="@color/background" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/feb_2021"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"/>

            <ImageView
                android:id="@+id/nextMonthBtn"
                android:layout_width="0dp"
                android:layout_weight="0.22"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/colorTertiary"
                android:contentDescription="@string/next"
                android:clickable="true"
                android:drawableTint="@color/background"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/outline_chevron_right"
                app:layout_constraintVertical_bias="0.5"
                app:tint="@color/background" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weekDaysContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/weeklyContainer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thu"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/weekDaysContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>