<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:visibility="visible"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/bg_overlay_card"
        android:elevation="8dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/info_icon"
            android:src="@drawable/gloves"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_started"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_now_in_an_active_cleaning_session"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>